<resources>

    <string name="app_name">InTheDark 01</string>

    <!-- Main -->
    <string name="main_title">Main title</string>
    <string name="main_badges_item3_counter">86</string>
    <string name="main_badges_item3_title">Metascore</string>
    <string name="main_badges_item3_text">62 critic reviews</string>
    <string name="main_badges_item2_title">Rate This</string>
    <string name="main_badges_item1_title_left">8.2</string>
    <string name="main_badges_item1_title_right">/10</string>
    <string name="main_badges_item1_text">150,212</string>
    <!-- Main -->

</resources>